--- a/src/Component/Body/style.css
+++ b/src/Component/Body/style.css
@@ -1,9 +1,22 @@
 
 
 .page-footer{
-    position:fixed;
+    position: static;
     bottom:0;
     left:0;
     width:100%;
+}
+.algo{
+    position:static;
+    width:100%;
 
+}
+
+@media (max-width: 386px)  {
+    .page-footer{
+
+        bottom:0;
+        left:0;
+        width:100%;
+    }
 }
