--- a/src/Component/sobremi/style.css
+++ b/src/Component/sobremi/style.css
@@ -7,11 +7,11 @@ body {
 }
 
 .bg {
-    animation:slide 3s ease-in-out infinite alternate;
-    background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+    animation:slide 1s ease-in-out infinite alternate;
+    background-image: linear-gradient(-40deg, #ffff00 50%, #00c0ff 50%);
     bottom:0;
     left:-50%;
-    opacity:.5;
+    opacity:.4;
     position:fixed;
     right:-50%;
     top:0;
@@ -20,11 +20,11 @@ body {
 
 .bg2 {
     animation-direction:alternate-reverse;
-    animation-duration:4s;
+    animation-duration:2s;
 }
 
 .bg3 {
-    animation-duration:5s;
+    animation-duration:3s;
 }
 
 .content {
@@ -43,7 +43,7 @@ body {
 
 @keyframes slide {
     0% {
-        transform:translateX(-25%);
+        transform:translateX(-20%);
     }
     100% {
         transform:translateX(25%);
