--- a/src/Component/sobremi/style.css
+++ b/src/Component/sobremi/style.css
@@ -1,51 +1,20 @@
-html {
-    height:100%;
+.carousel {
+    height: 400px;
+
 }
 
-body {
-    margin:0;
+.carousel {
+    transform: translateX(0px) translateY(0px) translateX(0px) translateX(0px) translateZ(0px);
+    z-index: 0;
+    opacity: 1;
+    visibility: visible;
 }
 
-.bg {
-    animation:slide 1s ease-in-out infinite alternate;
-    background-image: linear-gradient(-40deg, #ffff00 50%, #00c0ff 50%);
-    bottom:0;
-    left:-50%;
-    opacity:.4;
-    position:fixed;
-    right:-50%;
-    top:0;
-    z-index:-1;
-}
-
-.bg2 {
-    animation-direction:alternate-reverse;
-    animation-duration:2s;
-}
-
-.bg3 {
-    animation-duration:3s;
-}
-
-.content {
-    background-color:rgba(255,255,255,.8);
-    border-radius:.25em;
-    box-shadow:0 0 .25em rgba(0,0,0,.25);
-    box-sizing:border-box;
-    left:50%;
-    padding:10vmin;
-    position:fixed;
-    text-align:center;
-    top:50%;
-    transform:translate(-50%, -50%);
-}
-
-
-@keyframes slide {
-    0% {
-        transform:translateX(-20%);
-    }
-    100% {
-        transform:translateX(25%);
+@media (max-width: 700px) {
+    .carousel {
+        transform: translateX(0px) translateY(0px) translateX(0px) translateX(0px) translateZ(0px);
+        z-index: 0;
+        opacity: 1;
+        visibility: visible;
     }
 }
